# nnpi-host

./: .gitignore  Makefile.am  README.md  configure.ac
src/: Makefile.am
src/include/: nnpdrvInference.h  nnpdrvTypes.h
src/nnpi_drv/: Makefile.am  log_category_defs.h  nnp_log.h  nnpdrvMaintenance.h  nnpiChannel.cpp  nnpiChannel.h  nnpiCommandList.cpp  nnpiCommandList.h  nnpiContextObjDB.h  nnpiCopyCommand.cpp  nnpiCopyCommand.h  nnpiDevNet.cpp  nnpiDevNet.h  nnpiDevRes.cpp  nnpiDevRes.h  nnpiDevice.cpp  nnpiDevice.h  nnpiExecErrorList.cpp  nnpiExecErrorList.h  nnpiHandleMap.h  nnpiHostProc.cpp  nnpiHostProc.h  nnpiInfContext.cpp  nnpiInfContext.h  nnpiInfReq.cpp  nnpiInfReq.h  nnpiInference.cpp  nnpiUtils.cpp  nnpiUtils.h  nnpiWaitQueue.h  nnpiml_events.h  nnpiml_types.h  safe_lib.h
src/nnpi_drv/include/misc/: intel_nnpi.h
src/nnpi_drv/include/nnpi_ipc/: ipc_c2h_events.h  ipc_chan_c2h_opcodes.h  ipc_chan_h2c_opcodes.h  ipc_chan_protocol.h  ipc_protocol.h
src/nnpi_drv/include/nnpi_ipc/misc/: nnp_error.h
src/tests/: Makefile.am
src/tests/dummy_inference/: Makefile.am  dummy_inference.cpp  infer_network.cpp  infer_network.h
